--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-    <section class="py-5 bg-dark text-white">
+    <section class="py-5 darker-bg text-white">
         <div class="container">
             <h1 class="display-5 fw-bold mb-4">Find Your Next Adventure</h1>
             <p class="lead">Search our collection of games and accessories</p>
