--- a/public/css/home.css
+++ b/public/css/home.css
@@ -215,4 +215,9 @@ footer {
     transform: translateY(-10px);
     transition: all 0.5s ease-out;
 }
-
+.navbar {
+    background-color: #020910 !important;
+}
+.free-games-section {
+    background: inherit; /* inherit body background */
+}
