--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -2,11 +2,11 @@
 {% block title %}My Cart{% endblock %}
 
 {% block body %}
-    <div class="container my-5">
-        <h1 class="mb-4">Your Cart</h1>
-        <p class="lead">Review the items in your cart before proceeding to checkout.</p>
-
-        <div class="d-flex justify-content-between align-items-center mb-4">
+<section class="py-5 darker-bg text-white">
+        <div class="container">
+            <h1 class="display-5 fw-bold mb-4">Your Cart</h1>
+            <p class="lead">Review the items in your cart before proceeding to checkout</p>
+            <div class="d-flex justify-content-between align-items-center">
             <h4>
                 Total:
                 <span id="cart-total" class="badge bg-primary fs-5">
@@ -14,6 +14,13 @@
                 </span>
             </h4>
         </div>
+        </div>
+    </section>
+    <div class="container my-5">
+    
+        
+
+        
 
         <style>
             .trash-icon, .send-icon {
