--- a/templates/store/index.html.twig
+++ b/templates/store/index.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-    <section class="py-5 bg-dark text-white">
+    <section class="py-5 darker-bg text-white">
         <div class="container">
             <h1 class="display-5 fw-bold mb-4">Welcome to the GameHub Store</h1>
             <p class="lead">Browse our collection of games and accessories. Find your next adventure!</p>
