ui: add spacing between homepage sections

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -61,7 +61,7 @@
             </div>
         </div>
     </section>
-
+<hr class="styled-hr mt-5 mb-4">
     <!-- Free Games -->
     <section class="py-5">
         <div class="container">
@@ -90,6 +90,7 @@
         </div>
     </section>
 
+<hr class="styled-hr my-5">
     <!-- News Section -->
     <section class="py-5">
         <div class="container">     
@@ -118,5 +119,13 @@
             </div>
         </div>
     </section>
+    <style>
+    .styled-hr {
+  border: 0;
+  height: 2px;
+  background: linear-gradient(to right, transparent, #999, transparent);
+  opacity: 0.6;
+}
+    </style>
 
 {% endblock %}
