--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,15 +31,6 @@
             display: flex;
             flex-direction: column;
         }
-    
-
-
-
-
-
-
-
-
 
         .darker-bg {
   position: relative;
@@ -164,14 +155,14 @@
 
 <!-- Footer -->
 <footer class="footer darker-bg" style="background-color: #040e19; color: white;">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3 mb-4">
-                <h5>GameHub</h5>
+    <div class="container ">
+        <div class="row justify-content-center ">
+            <div class="col-md-3">
+                <h4 class="mb-3">GameHub</h4>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="{{ path('app_about') }}" class="nav-link p-0 text-light">About Us</a></li>
                     <li class="nav-item mb-2"><a href="{{ path('app_careers') }}" class="nav-link p-0 text-light">Careers</a></li>
-                    <li class="nav-item mb-2"><a href="{{ path('app_blog') }}" class="nav-link p-0 text-light">Blog</a></li>
+                    <li class="nav-item mb"><a href="{{ path('app_blog') }}" class="nav-link p-0 text-light">Blog</a></li>
                 </ul>
             </div>
             <!-- ... (other footer columns) ... -->
