--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -5,6 +5,8 @@
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/news.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/darkblue.css') }}">
+
 {% endblock %}
 
 {% block body %}
@@ -14,20 +16,20 @@
             <p class="lead">Stay up-to-date with the latest happenings in the gaming world</p>
         </div>
     </section>
-    <section class="py-5">
+    <section class="py-5 bg-dark-blue">
         <div class="container px-4">
             <div class="row g-4" id="news-container">
                 {% for newsItem in news %}
                     <div class="col-md-6 col-lg-4">
-                        <div class="card h-100 shadow-sm border-0">
+                        <div class="card h-100 shadow-sm border-0 bg-blue-dark">
                             <img src="{{ asset('uploads/news/' ~ newsItem.image) }}" class="card-img-top" alt="{{ newsItem.title }}">
                             <div class="card-body d-flex flex-column">
                                 <h3 class="card-title">{{ newsItem.title }}</h3>
-                                <p class="card-text flex-grow-1">{{ newsItem.summary|length > 120 ? newsItem.summary|slice(0, 120) ~ '...' : newsItem.summary }}</p>
-                                <a href="{{ path('app_news_show', { id: newsItem.id, slug: newsItem.slug }) }}" class="btn btn-sm btn-primary">Read More</a>
+                                <p class="card-text flex-grow-1 text-primary">{{ newsItem.summary|length > 120 ? newsItem.summary|slice(0, 120) ~ '...' : newsItem.summary }}</p>
+                                <a href="{{ path('app_news_show', { id: newsItem.id, slug: newsItem.slug }) }}" class="btn btn-outline-light btn-success rounded-pill">Read More</a>
                             </div>
                             <div class="card-footer bg-transparent border-0">
-                                <small class="text-muted">Posted {{ newsItem.createdAt|ago }} in {{ newsItem.genre.name }}</small>
+                                <small class="text-secondary">Posted {{ newsItem.createdAt|ago }} in {{ newsItem.genre.name }}</small>
                             </div>
                         </div>
                     </div>
