--- a/templates/store/index.html.twig
+++ b/templates/store/index.html.twig
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block body %}
+    <link rel="stylesheet" href="{{ asset('css/darkblue.css') }}">
     <section class="py-5 darker-bg text-white">
         <div class="container">
             <h1 class="display-5 fw-bold mb-4">Welcome to the GameHub Store</h1>
@@ -15,9 +16,9 @@
         </div>
     </section>
 
-    <section class="py-5">
-        <div class="container px-4">
-            <div class="row g-4" id="games-container">
+    <section class="py-5 bg-dark-blue">
+        <div class="container px-4 ">
+            <div class="row g-4" id="games-container bg-blue-dark">
                 {% include 'store/nextPage.html.twig' %}
             </div>
             <div id="loading-spinner" class="text-center">
