--- a/templates/adminbase.html.twig
+++ b/templates/adminbase.html.twig
@@ -1,4 +1,7 @@
+
+{% extends 'base.html.twig' %}
 {# templates/base.html.twig #}
+{% block body %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -109,7 +112,6 @@
     </div>
 </nav>
 
-{% block body %}{% endblock %}
 
 
 
@@ -118,3 +120,4 @@
 {% block javascripts %}{% endblock %}
 </body>
 </html>
+{% endblock %}
