--- a/templates/store/index.html.twig
+++ b/templates/store/index.html.twig
@@ -18,7 +18,7 @@
 
     <section class="py-5 bg-dark-blue">
         <div class="container px-4 ">
-            <div class="row g-4" id="games-container bg-blue-dark">
+            <div class="row g-4 bg-blue-dark" id="games-container">
                 {% include 'store/nextPage.html.twig' %}
             </div>
             <div id="loading-spinner" class="text-center">
