--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -6,12 +6,12 @@
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
-<div class="container">
+<div class="container mb-5">
     <div class="example-wrapper">
         <h1 class="text-center my-5 display-4 fw-bold">
                 Welcome to the <span class="text-primary">Administrator</span> Dashboard
         </h1>
-        <p class="text-center text-muted mb-5">
+        <p class="text-center mb-5">
             Manage your platform's content, users, and settings
         </p>
     </div>
