--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -66,7 +66,7 @@
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">{{ item.game.title }}</h5>
                             <p class="card-text mb-3">
-                                Price : {{ item.game.price|number_format(2, '.', ',') }} €
+                                Price : {{ item.game.price|number_format(2, '.', ',') }} $
                             </p>
 
                             <div class="mt-auto">
