--- a/templates/search/nextPage.html.twig
+++ b/templates/search/nextPage.html.twig
@@ -1,6 +1,6 @@
 {% for game in games %}
-    <div class="col-lg-4 col-md-6">
-        <div class="game-card card h-100 border-0 shadow-sm overflow-hidden transition-all hover-shadow-lg hover-transform-scale">
+    <div class="col-lg-4 col-md-6 bg-dark-blue">
+        <div class="game-card card h-100 border-0 shadow-sm overflow-hidden transition-all hover-shadow-lg hover-transform-scale bg-blue-dark">
             <div class="position-relative overflow-hidden" style="height: 200px;">
                 <img src="{{ asset('uploads/games/' ~ game.thumbnail) }}"
                      class="img-fluid w-100 h-100 object-fit-cover"
@@ -24,13 +24,13 @@
                                 <i class="far fa-star text-warning"></i>
                             {% endif %}
                         {% endfor %}
-                        <span class="ms-1 text-muted">{{ game.averageRating|number_format(1) }}</span>
+                        <span class="ms-1 text-light">{{ game.averageRating|number_format(1) }}</span>
                     </div>
-                    <span class="h5 text-dark mb-0">${{ game.price|number_format(2) }}</span>
+                    <span class="h5 text-primary mb-0">${{ game.price|number_format(2) }}</span>
                 </div>
 
                 <div class="d-grid">
-                    <a href="{{ path('app_game_about', {'id': game.id}) }}" class="btn btn-outline-primary stretched-link">
+                    <a href="{{ path('app_game_about', {'id': game.id}) }}" class="btn btn-outline-primary stretched-link rounded-pill">
                         View Details <i class="fas fa-arrow-right ms-2"></i>
                     </a>
                 </div>
