--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,9 @@
         }
 
         body {
+            display: flex;
+  flex-direction: column;
+  min-height: 100vh;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: var(--primary-color);
             color: var(--text-color);
@@ -150,7 +153,7 @@
                 {% if app.user %}
                   <a href="{{ path('app_logout') }}" class="btn btn-primary rounded-pill me-2 px-4">Logout</a>
                 {% else %}
-                    <a href="{{ path('app_login') }}" class="btn btn-primary me-2">Sign In</a>
+                    <a href="{{ path('app_login') }}" class="btn btn-primary rounded-pill px-4 me-2">Sign In</a>
                 {% endif %}
             </div>
         </div>
