--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -106,7 +106,7 @@
 
               <!-- Submit button -->
               <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-dark btn-lg">
+                <button type="submit" class="btn btn-dark rounded-pill btn-lg">
                   Login
                 </button>
               </div>
@@ -129,10 +129,7 @@
 {% block stylesheets %}
     {{ parent() }}
     <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome for icons -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    
+   
     <style>
         .login-card {
             padding: 2rem;
