checkout static --flouci ++ paypal [paypal to be completed]

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -13,6 +13,12 @@
                     {{ total|number_format(2, '.', ',') }} €
                 </span>
             </h4>
+            {% if app.user and items|length > 0 %}
+                <a href="{{ path('cart_checkout') }}" class="btn btn-success">
+                    💳 Pay Now
+                </a>
+            {% endif %}
+
         </div>
 
         <style>
