align admin navbar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -117,7 +117,7 @@
 <body>
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
+    <div class="container-fluid">
         <a class="navbar-brand" href="{{ path('app_home') }}">
             <img src="{{ asset('images/logo.png') }}" alt="GameHub Logo">
         </a>
