--- a/templates/genre/index.html.twig
+++ b/templates/genre/index.html.twig
@@ -1,7 +1,6 @@
 {% extends 'adminbase.html.twig' %}
 
 {% block title %}Genre Management{% endblock %}
-
 {% block stylesheets %}
     {{ parent() }}
     <style>
@@ -26,7 +25,7 @@
 
 {% block body %}
     <div class="container-fluid py-4">
-        <div class="d-flex justify-content-between align-items-center mb-4">
+        <div class="d-flex justify-content-between flex-wrap mb-4">
             <h1>Genre Management</h1>
             <a href="{{ path('app_genre_new') }}" class="btn btn-primary">
                 <i class="fas fa-plus me-2"></i>Create New Genre
@@ -52,7 +51,7 @@
                                     <td>{{ genre.name }}</td>
                                     <td>{{ genre.slug }}</td>
                                     <td>
-                                        <div class="d-flex gap-2">
+                                        <div class="btn-group" role="group">
                                             <a href="{{ path('app_genre_edit', {'id': genre.id}) }}"
                                                class="btn btn-sm btn-outline-secondary" title="Edit">
                                                 <i class="fas fa-edit"></i>
@@ -67,10 +66,9 @@
                                                 </button>
                                             </form>
                                             <a href="{{ path('app_game_crud_index', {'genre': genre.id}) }}"
-                                            class="btn btn-sm btn-outline-warning" title="View Games in Genre">
+                                               class="btn btn-sm btn-outline-warning" title="View Games in Genre">
                                                 <i class="fas fa-gamepad"></i>
                                             </a>
-
                                         </div>
                                     </td>
                                 </tr>
@@ -87,16 +85,5 @@
                 </div>
             </div>
         </div>
-
-        {# Pagination - uncomment if you're using KnpPaginatorBundle #}
-        {# 
-        <div class="d-flex justify-content-center mt-4">
-            {{ knp_pagination_render(genres) }}
-        </div>
-        #}
     </div>
-{% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
 {% endblock %}
